# openhotspot

./: .gitignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.txt  LICENSE  LICENSE.txt  MAINTAINERS.txt  Makefile  Makefile.am  README  README.md  README.txt  TODO  TODO.md  TODO.txt  TSALOG  TSALOG.md  TSALOG.txt  configure.ac  openhotspot.pro  server.py  test.csv  test_latitudes.txt
data/: README  c_days.txt  c_latitudes.txt  c_longitudes.txt  crimes.txt  test_crimes.txt  test_latitudes.txt  test_longitudes.txt  test_sf_dataset.csv
docs/: TSALOG.txt
docs/languages/: ES_README.rst  HI_README.rst  README.ja  README.ru  ZH_README.rst
docs/source/: contributing.md  contributing.rst  ethics.md  ethics.rst  (+4 more)
example/: sf_dataset_1k.csv
launch/: server.py
scripts/: server.py  sf_example_analysis.sh
src/: canalysis.cpp  canalysis.h  client.cpp  client.h  client_map.cpp  client_map.h  dbscan.cpp  dbscan.h  export.cpp  export.h  hotspot.cpp  hotspot.h  hs_classification.cpp  hs_classification.h  hs_client.cpp  hs_client.h  hs_client_map.cpp  hs_client_map.h  hs_dbscan.cpp  hs_dbscan.h  hs_debug.cpp  hs_debug.h  hs_export.cpp  hs_export.h  hs_layer.cpp  hs_layer.h  hs_logger.cpp  hs_logger.h  hs_model.cpp  hs_model.h  hs_reformat.cpp  hs_reformat.h  hs_spatial_autocorrelation.cpp  hs_spatial_autocorrelation.h  hs_types.h  hs_utils.cpp  hs_utils.h  layer.cpp  layer.h  main.cpp  (+21 more)
templates/: base.html
tests/: Makefile  test_dbscan.cpp  test_hs_dbscan.cpp  test_hs_layer.cpp  test_hs_layer.h  test_spatial_autocorrelation.cpp
(+49 files in other folders)
